# fast-python-backtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  windows.md
.github/workflows/: cmake.yml  code_coverage.yml
cmake/: coverage.cmake
src/: CMakeLists.txt  format.hpp  main.cpp  parquet_table.cpp  parquet_table.ipynb  print.hpp  program_options.hpp  pybind11_parquet_class_test.cpp  read_parquet.cpp  simple_pybind11_notebook.ipynb  simple_pybind11_parquet_test.cpp  simple_pybind11_test.cpp  simple_thread_pool.cpp  top_of_book.cpp
src/apps/: CMakeLists.txt
src/apps/read_parquet/: CMakeLists.txt  read_parquet.cpp
src/apps/thread_pool/: CMakeLists.txt  simple_thread_pool.cpp
src/lib/: CMakeLists.txt  enum.hpp  program_options.hpp  ranges.hpp  version.hpp
src/tests/: CMakeLists.txt  enum.tests.cpp  logging.hpp  program_options.tests.cpp  redirect_stream.hpp
